--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Task</title>
+     <link rel="stylesheet" href="styles/flex.css">
 </head>
 <body>
+    <header>
+        <div class="main-container">
+            <div class="textes">
+               <h1 class="head">All Thinks Are <br> Possible If You <br> believe </h1>
+               <p class="pragh">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+               <button class="btn">Contact Us</button>
+            </div>
+        </div>
+    </header>
+    <main>
+
+        
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
