--- a/index.html
+++ b/index.html
@@ -17,8 +17,53 @@
         </div>
     </header>
     <main>
+         <div class="service-container">
+            <div class="lady">
+                <img src="images/person.png" alt="A lady">
+            </div>
+            <div class="details">
+                 <h1 class=" hhead">My failures of <br> previous year</h1>
+                 <p class="ppragh">Contrary to popular belief, Lorem Ipsum is not <br>simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
+                 <ul class="order">
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ul>
+            </div>
+         </div>
 
-        
+         <section class="blog"> 
+            <h1>My Plans</h1>
+         </section>
+         <div class="logos">
+            <div class="web">
+               <img src="images/icons/web.png" alt="">
+               <h3>Web Development</h3>
+               <p>I want to start</p>
+            </div>
+            <div class="web">
+                <img src="images/icons/js.png" alt="">
+                <h3>Javascript</h3>
+                <p>I want to learn</p>
+            </div>
+            <div class="web">
+                 <img src="images/icons/smoke.png" alt="">
+                 <h3>Smoking Habit</h3>
+                 <p>I want to end</p>
+            </div>
+            <div class="web">
+                 <img src="images/icons/ecom.png" alt="">
+                 <h3>ecommerce</h3>
+                 <p>I want to develop</p>
+            </div>
+         </div>
+         <div class="watch">
+            <h2>Awlays keep a positive <br> mindset</h2>
+            <button>Call Now</button>
+         </div>
+
     </main>
     <footer>
 
