--- a/index.html
+++ b/index.html
@@ -60,12 +60,31 @@
             </div>
          </div>
          <div class="watch">
-            <h2>Awlays keep a positive <br> mindset</h2>
-            <button>Call Now</button>
+            <h1 class="always">Awlays keep a positive <br> mindset</h1>
+            <button class="call">Call Now</button>
          </div>
 
     </main>
     <footer>
+        <div class="foot">
+            <div class="left">
+             <h1 class="fuuu">Future</h1>
+             <p class="pgh">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+             <p clas="ema">Email : info@gmail.com</p>
+             <p>Phone : 01500 00 00 00</p>
+             <div class="log">
+               <img src="images/icons/fb.png" alt="">
+               <img src="images/icons/twitter.png" alt="">
+               <img src="images/icons/youtube.png" alt="">
+             </div>
+            </div>
+            <div class="right">
+              <h3>Subscribe</h3>
+              <input class="inp" type="email" placeholder="Enter your email">
+              <br>
+              <button class="bton">Subscribe</button>
+            </div>
+        </div>
 
     </footer>
     
